make change to link

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     </div>
 
     <!--Section hebergement -->
-     <main id="hebergement">        
+     <main >        
           <div class="hebergementsContainer">               
             <article> 
-                <h2 class="hebergementTitle">Hébergements à Marseille</h2>             
+                <h2 class="hebergementTitle" id="hebergement">Hébergements à Marseille</h2>             
                 <div class="parent_box">
                     <div class="box">
                         <figure>
