responsive for 1900px

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <figure>
                         <img src="images/hebergement/popularImage1.jpg" alt="photo_emile-guillemot">
                         <figcaption>    
-                        <h3> Hôtel Le soleil du matin</h3>
+                        <h3> Hôtel Le soleil du<br> matin</h3>
                          <p>Nuit à partir de 128<strong>&#8364;</strong></p>
                         </figcaption>
                     </figure>
@@ -207,7 +207,7 @@
                     <figure>
                         <img src="images/hebergement/popularImage2.jpg" alt="photo_reisetopia-B8WIgxA">
                         <figcaption>
-                            <h3>Au coeur de l'eau chambres d'
+                            <h3>Au coeur de l'eau <br>chambres d'
                                 hôtes</h3>
                             <p>Nuit à partir de 17<strong>&#8364;</strong></p>
                         </figcaption>
@@ -224,7 +224,7 @@
                     <figure>
                         <img src="images/hebergement/popularImage3.jpg" alt="photo_emile-guillemot">
                         <figcaption>
-                            <h3>Hôtel Tout bleu et Blanc</h3>
+                            <h3>Hôtel Tout bleu et<br> Blanc</h3>
                             <p>Nuit à partir de 128<strong>&#8364;</strong></p>
                         </figcaption>
                     </figure>
@@ -295,7 +295,7 @@
                     <figure>
                         <div class="activitySmImg" id="activityImg6"></div>
                         <figcaption>
-                            <h4>Parc longchamp</h4>
+                            <h4>Parc Longchamp</h4>
                         </figcaption>
                     </figure>
                 </div>
