Refactoring the codes

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="box">
                         <figure>
                             <div class="hebergementImg" id="hebergementImg6"></div>
-                            <figcaption class="captionHeberhement">
+                            <figcaption class="captionHebergement">
                                 <h3>
                                     Hôtel chez Amina</h3>
                                 <p>Nuit à partir de 96<strong>&#8364;</strong></p>
