--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         <p> Plus de 500 logements sont disponibles dans cette ville
         </p>
     </div>
-
     <!--Section hebergement -->
-     <main >        
+     <main>        
           <div class="hebergementsContainer">               
             <article> 
                 <h2 class="hebergementTitle" id="hebergement">Hébergements à Marseille</h2>             
@@ -92,8 +91,7 @@
                             <li class="unCheckStart"><i class="fas fa-star"></i></li>
                         </ul>
                             </figcaption>
-                        </figure> 
-                        
+                        </figure>                         
                     </div>
                     <div class="box">
                         <figure>
@@ -318,8 +316,7 @@
             <h3>Nos hébergements</h3>
             <ul>
                 <li>Charte qualité</li>
-                <li>Soumetter votre
-                    hôtel</li>
+                <li>Soumetter votre hôtel</li>
             </ul>
         </div>
         <div class="card">
