--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     <li><i class="fas fa-star"></i></li>
                                     <li><i class="fas fa-star"></i></li>
                                     <li><i class="fas fa-star"></i></li>
-                                    <li class="unCheckStart"><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
                                 </ul>
                             </figcaption>
                         </figure>
@@ -120,7 +120,7 @@
                                     <li><i class="fas fa-star"></i></li>
                                     <li><i class="fas fa-star"></i></li>
                                     <li><i class="fas fa-star"></i></li>
-                                    <li class="unCheckStart"><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
                                     <li class="unCheckStart"><i class="fas fa-star"></i></li>
                                 </ul>
                             </figcaption>
@@ -164,7 +164,7 @@
                     <div class="box">
                         <figure>
                             <div class="hebergementImg" id="hebergementImg6"></div>
-                            <figcaption class="captionHebergement">
+                            <figcaption class="captionHeberhement">
                                 <h3>
                                     Hôtel chez Amina</h3>
                                 <p>Nuit à partir de 96<strong>&#8364;</strong></p>
@@ -215,7 +215,8 @@
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
-                        <li><i class="fas fa-star"></i></li>
+                        <li class="unCheckStart"><i class="fas fa-star"></i></li>
+                        
                     </ul>
                 </div>
                 <div class="popularBox">
@@ -231,7 +232,7 @@
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
-                        <li><i class="fas fa-star"></i></li>
+                        <li class="unCheckStart"><i class="fas fa-star"></i></li>
                     </ul>
                 </div>
             </aside>
